<resources>
    <string name="app_name">CovidApplication</string>
    <string name="precatutions">You can reduce your chances of being infected or spreading COVID-19 by taking some simple precautions: \n

        \n
        1.Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.\n  Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands. \n
        \n
        2.Maintain at least 1 metre (3 feet) distance between yourself and others.\n  Why? When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which may contain virus. If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person has the disease. \n
        \n
        3.Avoid going to crowded places.\n  Why? Where people come together in crowds, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre (3 feet). \n
        \n
        4.Avoid touching eyes, nose and mouth. \n Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and infect you. \n
        \n
        5.Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately and wash your hands. \n Why? Droplets spread virus. By following good respiratory hygiene, you protect the people around you from viruses such as cold, flu and COVID-19. \n
        \n
        6.Stay home and self-isolate even with minor symptoms such as cough, headache, mild fever, until you recover. Have someone bring you supplies. If you need to leave your house, wear a mask to avoid infecting others. \n Why? Avoiding contact with others will protect them from possible COVID-19 and other viruses. \n
        \n
        7.If you have a fever, cough and difficulty breathing, seek medical attention, but call by telephone in advance if possible and follow the directions of your local health authority. \n Why? National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent spread of viruses and other infections. \n
        \n
        8.Keep up to date on the latest information from trusted sources, such as WHO or your local and national health authorities. \n Why? Local and national authorities are best placed to advise on what people in your area should be doing to protect themselves.</string>
    <string name="title_activity_maps">Map</string>
    <string name="helpline">While you are unwell you infection risk is low. Do remember that currently it is safer to consult a doctor through phone or video than to visit a hospital.  We recommend that you stay at home to avoid any exposure to the Novel CoronaVirus. For any help or assistance contact the CORONA HELPLINE NOW!</string>
    <string name="p1">\n\nRegularly and thoroughly clean your hands with an alcohol based hand rub or wash them with soap and water.\nWhy? Washing your hands with soap and water or using alcohol based hand rub kills viruses that may be on your hands.</string>
    <string name="p2">\n\nMaintain at least 1 metre (3 feet) distance between yourself and others.\nWhy? When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which may contain virus. If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person has the disease.</string>
    <string name="p3">\n\nAvoid going to crowded places.\nWhy? Where people come together in crowds, you are more likely to come into close contact with someone that has COIVD-19 and it is more difficult to maintain physical distance of 1 metre (3 feet).</string>
    <string name="p4">\n\nAvoid touching eyes, nose and mouth.\nWhy? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and infect you.</string>
    <string name="p5">\n\nStay home and self-isolate even with minor symptoms such as cough, headache, mild fever, until you recover. Have someone bring you supplies. If you need to leave your house, wear a mask to avoid infecting others.\nWhy? Avoiding contact with others will protect them from possible COVID-19 and other viruses.</string>

</resources>
